feat: jwt cache addition